# c2pa-demo

./: Cargo.toml  README.md  readme.md
cert-viewer-react/: package-lock.json  package.json
cert-viewer-react/public/: index.html
cert-viewer-react/src/: App.js  index.css
cert-viewer-react/src/components/: DisplayImage.js
src/: args.rs  main.rs
