[package]
name = "c2pa_rw"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
c2pa = { version = "0.20.0", features = ["file_io"] }
tempfile = "3.5.0"
clap = { version = "4.2.1", features = ["derive"] }
cli-clipboard = "0.4.0"
